--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             }
             , "j": {
                   "name": "Loxias Loukas"
-                , "description": ""
+                , "description": "https://tattoo.github.io/fae/fae.pdf\nhttps://tattoo.github.io/fae/fate.pdf"
                 , "refresh": "3"
                 , "aspect": ["Kirkasotsainen tutkiva journalisti", "Työntää nokkansa vääriin paikkoihin", "Herättää välitöntä luottamusta", "", ""]
                 , "approach": ["+1", "+3", "+1", "0", "+2", "+2"]
