--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     , "consequence": ["", "", ""]
                 }
                 , "e": {
-                      "name": "Anfion Saradatos"
+                      "name": "Amfion Saradatos"
                     , "description": ""
                     , "refresh": "3"
                     , "aspect": ["Altruistinen telepaatti-pilotti", "Bourasin turvallisuuspalvelun etsintäkuuluttama", "Rahtialus Voleta", "", ""]
