fix wrong approach name in a stunt

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     , "refresh": "3"
                     , "aspect": ["Kirkasotsainen tutkiva journalisti", "Työntää nokkansa vääriin paikkoihin", "Herättää välitöntä luottamusta", "", ""]
                     , "approach": ["+1", "+3", "+1", "0", "+2", "+2"]
-                    , "stunts": "Koska olen taitava puhuja\nSaan +2 kun ovelasti ylitän haasteen\nyrittäessäni saada itselleni pääsyä paikkoihin, johon minulla ei olisi oikeutta"
+                    , "stunts": "Koska olen taitava puhuja\nSaan +2 kun sukkelasti ylitän haasteen\nyrittäessäni saada itselleni pääsyä paikkoihin, johon minulla ei olisi oikeutta"
                     , "stress": ["", "", ""]
                     , "consequence": ["", "", ""]
                 }
