--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             var data = {
                 "a": {
                       "name": "Julius Mallas"
-                    , "description": ""
+                    , "description": "Lyhyenläntä, mutta hyväkuntoinen aasilaisperäinen ihminen, joka näyttää nuorekkaala, vaikka hiukset harmaantuvat."
                     , "refresh": "3"
                     , "aspect": ["Geeninuorennettu, eläköityny johdon konsultti", "Pitkällä uralla on pitkät jäljet", "Rhodium-tason asiakkuus Arkadia Varallisuudessa", "", ""]
                     , "approach": ["+3", "+1", "+1", "+2", "+2", "0"]
@@ -192,7 +192,7 @@
                 }
                 , "e": {
                       "name": "Amfion Saradatos"
-                    , "description": ""
+                    , "description": "Adrasti, jolla reisitaskuhousut, toppaliivi ja puuhelmet kaulassa. Adrastit näyttävät 'hillityiltä Greedoilta'"
                     , "refresh": "3"
                     , "aspect": ["Altruistinen telepaatti-pilotti", "Bourasin turvallisuuspalvelun etsintäkuuluttama", "Rahtialus Voleta", "", ""]
                     , "approach": ["+2", "+1", "+1", "0", "+2", "+3"]
@@ -202,7 +202,7 @@
                 }
                 , "j": {
                       "name": "Loxias Loukas"
-                    , "description": ""
+                    , "description": "Nuorekas, alle kolmekymppinen ja silmälasipäinen ihminen."
                     , "refresh": "3"
                     , "aspect": ["Kirkasotsainen tutkiva journalisti", "Työntää nokkansa vääriin paikkoihin", "Herättää välitöntä luottamusta", "", ""]
                     , "approach": ["+1", "+3", "+1", "0", "+2", "+2"]
