--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
                     , "description": "Lyhyenläntä, mutta hyväkuntoinen aasilaisperäinen ihminen, joka näyttää nuorekkaala, vaikka hiukset harmaantuvat."
                     , "refresh": "3"
                     , "aspect": ["Geeninuorennettu, eläköityny johdon konsultti", "Pitkällä uralla on pitkät jäljet", "Rhodium-tason asiakkuus Arkadia Varallisuudessa", "", ""]
-                    , "approach": ["+3", "+1", "+1", "+2", "+2", "0"]
-                    , "stunts": "Koska olen ymmärtänyt verkostoitumisen arvon,\nvoin kerran pelikerran aikana löytää hyödyllisen vanhan tutun\n\n(Koska refleksejäni on keinohermostollisesti paranneltu,\nvoin kerran pelisekerran aikana toimia taistelussa ensimmäisenä)"
+                    , "approach": ["+2", "+1", "+1", "+3", "+2", "0"]
+                    , "stunts": "Koska olen ymmärtänyt verkostoitumisen arvon,\nvoin kerran pelikerran aikana löytää hyödyllisen vanhan tutun\n\nKoska olen kokenut neuvottelija, kerran pelikerran aikana voin aistia tai päätellä mikä on jonkun hahmon perimmäinen tavoite.\n\n(Koska refleksejäni on keinohermostollisesti paranneltu,\nvoin kerran pelisekerran aikana toimia taistelussa ensimmäisenä)"
                     , "stress": ["", "", ""]
                     , "consequence": ["", "", ""]
                 }
@@ -195,9 +195,9 @@
                       "name": "Amfion Saradatos"
                     , "description": "Adrasti, jolla reisitaskuhousut, toppaliivi ja puuhelmet kaulassa. Adrastit näyttävät 'hillityiltä Greedoilta'"
                     , "refresh": "3"
-                    , "aspect": ["Altruistinen telepaatti-pilotti", "Bourasin turvallisuuspalvelun etsintäkuuluttama", "Rahtialus Voleta", "", ""]
+                    , "aspect": ["Altruistinen telepaatti-pilotti", "Bourasin turvallisuuspalvelun etsintäkuuluttama", "Rahtialus Vzoleta", "Sisäisen kasvun etsijä", ""]
                     , "approach": ["+2", "+1", "+1", "0", "+2", "+3"]
-                    , "stunts": "Koska alukseni on varustettu häivetekniikalla,\nSaan +2 kun ovelasti puolustan\nlentäessäni alustani"
+                    , "stunts": "Koska alukseni on varustettu häivetekniikalla,\nSaan +2 kun ovelasti puolustan\nlentäessäni alustani.\n\nKoska osaan rauhoittavan telepatiatekniikan,\nkerran sessiossa pystyn selvittämään salaisuuden, jonka hahmo yrittää kätkeä minulta"
                     , "stress": ["", "", ""]
                     , "consequence": ["", "", ""]
                 }
@@ -207,7 +207,7 @@
                     , "refresh": "3"
                     , "aspect": ["Kirkasotsainen tutkiva journalisti", "Työntää nokkansa vääriin paikkoihin", "Herättää välitöntä luottamusta", "", ""]
                     , "approach": ["+1", "+3", "+1", "0", "+2", "+2"]
-                    , "stunts": "Koska olen taitava puhuja\nSaan +2 kun sukkelasti ylitän haasteen\nyrittäessäni saada itselleni pääsyä paikkoihin, johon minulla ei olisi oikeutta"
+                    , "stunts": "Koska olen taitava puhuja\nSaan +2 kun sukkelasti ylitän haasteen\nyrittäessäni saada itselleni pääsyä paikkoihin, johon minulla ei olisi oikeutta\n\nKoska olen reportterina oppinut toimimaan kuumottavien tyyppien kanssa,\nsaan +2 kun ovelasti luon edun (sneakily create an advantage)\nkun käytän puhetta konfliktitilanteessa "
                     , "stress": ["", "", ""]
                     , "consequence": ["", "", ""]
                 }
